[package]
name = "penning-launcher"
version = "0.1.1"
edition = "2021"

[dependencies]
dirs = "5.0.1"
octocrab = "0.39.0"
reqwest = "0.12.7"
rfd = { version = "0.14.1", default-features = false, features = ["tokio", "xdg-portal"] }
self-replace = "1.5.0"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
